force-app/main/default/objects/NV_Ticket__c/NV_Ticket__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Stores information about any external ticket we are tracking for a Customer SFDC Case. This included NV Bug, JIRA, ServiceNow, PagerDuty, 3rd Party Cases.</description>
    <label>NV Ticket</label>
    <nameField>
        <label>Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NV Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>