force-app/main/default/objects/NV_Ticket__c/fields/Bug_no_in_NVBug_Not_in_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Bug_no_in_NVBug_Not_in_SFDC__c</fullName>
    <label>NvBug Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>