force-app/main/default/objects/NV_Ticket__c/fields/Case_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Formula__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;  Case__r.Id ,  Case__r.CaseNumber ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>