force-app/main/default/objects/NV_Ticket__c/fields/IsApplicationIntegrationEntryCreated__c.field-meta.xml
<CustomField>
    <fullName>IsApplicationIntegrationEntryCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApplicationIntegrationEntryCreated</label>
    <type>Checkbox</type>
</CustomField>