force-app/main/default/objects/NV_Ticket__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Game rendering</fullName>
            </value>
            <value>
                <fullName>Game display</fullName>
            </value>
            <value>
                <fullName>User metadata</fullName>
            </value>
            <value>
                <fullName>Session Start</fullName>
            </value>
            <value>
                <fullName>Uninterrupted Session play</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>