force-app/main/default/objects/NV_Ticket__c/fields/NVBug__c.field-meta.xml
<CustomField>
    <fullName>NVBug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NVBug</label>
    <referenceTo>NVBug__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>NV_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>