force-app/main/default/objects/NV_Ticket__c/fields/NVBug_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>NVBug_Number_Formula__c</fullName>
    <formula>NVBug__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NVBug Number Formula</label>
    <type>Text</type>
</CustomField>