force-app/main/default/objects/NV_Ticket__c/fields/NVBug_System_Message__c.field-meta.xml
<CustomField>
    <fullName>NVBug_System_Message__c</fullName>
    <label>NVBug System Message</label>
    <type>TextArea</type>
</CustomField>