force-app/main/default/objects/NV_Ticket__c/fields/NVBugLinkFormula__c.field-meta.xml
<CustomField>
    <fullName>NVBugLinkFormula__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; NVBug__r.Id ,NVBug__r.Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NVBug</label>
    <type>Text</type>
</CustomField>