force-app/main/default/objects/NV_Ticket__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>PagerDuty</fullName>
            </value>
            <value>
                <fullName>NVBug</fullName>
            </value>
            <value>
                <fullName>Failure Analysis NVBug</fullName>
            </value>
            <value>
                <fullName>3rd Party Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>