force-app/main/default/objects/NV_Ticket__c/recordTypes/NVBug.recordType-meta.xml
<RecordType>
    <fullName>NVBug</fullName>
    <active>true</active>
    <label>NVBug</label>
</RecordType>